Refactor: fix some Sonar issues